fixed text wrapping

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -210,3 +210,11 @@ h2 {text-align: center;}
   visibility: visible;
   opacity: 1;
 }
+
+pre {
+ white-space: pre-wrap;       /* css-3 */
+ white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+ white-space: -pre-wrap;      /* Opera 4-6 */
+ white-space: -o-pre-wrap;    /* Opera 7 */
+ word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
